# Nuts

./: .env.example  .gitignore  Makefile  pyproject.toml
frontend/: package-lock.json  package.json  vite.config.js
nuts/: Dockerfile  celerybeat-schedule-shm  celerybeat-schedule-wal  manage.py  package-lock.json
nuts/about/: models.py  translation.py
nuts/auth/: authentication.py  forms.py  mixins.py  models.py  tokens.py  translation.py  urls.py  views.py
nuts/cart/: context_processors.py  managers.py  models.py  urls.py  utils.py  views.py
nuts/core/: blocks.py  models.py  translation.py  validators.py
nuts/customers/: blocks.py  models.py  translation.py
nuts/gallery/: blocks.py  models.py  translation.py
nuts/home/: models.py  translation.py
nuts/locations/: models.py  translation.py
nuts/news/: models.py  translation.py
nuts/not_found/: apps.py  models.py  translation.py
nuts/nuts/: celery.py  urls.py  wsgi.py
nuts/orders/: forms.py  models.py  tasks.py  urls.py  views.py
nuts/payment_and_delivery/: apps.py  blocks.py  models.py  translation.py
nuts/payment_transactions/: models.py
nuts/products/: admin.py  apps.py  blocks.py  models.py  translation.py
nuts/profiles/: forms.py  models.py  translation.py  urls.py  views.py
nuts/search/: views.py
nuts/shop/: forms.py  models.py  translation.py  urls.py  views.py
nuts/thanks/: models.py  (+1 more)
templates/: 404.html  about.html  base.html  cart.html  checkout.html  customers.html  gallery.html  home.html  payment_and_delivery.html  product.html  shop.html  terms_of_use.html  thanks.html
(+137 files in other folders)
